# mnist

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  index.html  index.js
public/: index.js  run.js
src/: app.rs  lib.rs  m.rs  main.rs
src/m/: model.rs  state.rs
style/: main.scss
