[package]
name = "mnist-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Dilshod Tadjibaev (@antimora)"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu", "cubecl-runtime"]

[dependencies]
burn = { version = "0.15", default-features = false }
cubecl-runtime = { version = "0.3.0", optional = true, features = ["channel-mpsc"] } # missing feature flag
#serde = { workspace = true }
console_error_panic_hook = { version = "0.1" }

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
